# routes/ants.js
@@ -2,6 +2,7 @@
 
 const router = require( 'express' ).Router();
 const antsController = require( '../controllers/ants' );
+const { auth, requiresAuth } = require('express-openid-connect'); // dereference return
 
 // GET all ants
 router.get( '/', antsController.getAnts );
@@ -9,13 +10,13 @@ router.get( '/', antsController.getAnts );
 // GET a single ant based on id
 router.get( '/:id', antsController.getAnt );
 
-// POST to create a new ant
-router.post( '/', antsController.createAnt );
+// POST to create a new ant, require oauth
+router.post( '/', requiresAuth(), antsController.createAnt );
 
-// PUT to update an ant
-router.put( '/:id', antsController.updateAnt );
+// PUT to update an ant, require oauth
+router.put( '/:id', requiresAuth(), antsController.updateAnt );
 
-// DELETE to delete an ant
-router.delete( '/:id', antsController.deleteAnt );
+// DELETE to delete an ant, require oauth
+router.delete( '/:id', requiresAuth(), antsController.deleteAnt );
 
 module.exports = router;
